# vitrine

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: launcher_bot.py  small_bot.py
examples/shop/: main.py
examples/shop/botapp/: admin.py  cbs.py  identity.py  menus.py  order_flow.py  views.py  workers.py
examples/shop/domain/: models.py  services.py
src/vitrine/: __init__.py  app.py  args.py  auth.py  callbacks.py  commands.py  conversations.py  dispatch.py  errors.py  exceptions.py  injection.py  logging.py  markdown.py  media.py  middleware.py  pagination.py  ratelimit.py  routing.py  screens.py  workers.py
tests/: conftest.py  test_app.py  test_callbacks.py  test_conversations.py  test_dispatch.py  test_injection.py  test_misc.py  test_reply_keyboard.py  test_screens.py  test_workers.py
